--- a/cn/index.html
+++ b/cn/index.html
@@ -214,6 +214,56 @@
                 </div>
                 
             </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://javmenu.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://javmenu.com/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="https://javmenu.com/assets/images/logo.png" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>javmenu</strong>
+                                </a>
+                                <p class="overflowClip_2">javmenu</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://ra01.cc/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://ra01.cc/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="https://ra01.cc/favicon.ico" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>好莱污影院</strong>
+                                </a>
+                                <p class="overflowClip_2">好莱污影院</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://allinav01.cc/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://allinav01.cc/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>AllinTV</strong>
+                                </a>
+                                <p class="overflowClip_2">AllinTV</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
           
             <br />
             <!-- END 常用推荐 -->
